Fix client side nav bar scrolling off screen

--- a/src/App/app.scss
+++ b/src/App/app.scss
@@ -3,7 +3,7 @@
 #root {
   display: flex;
   flex-direction: column;
-  height: 100vh;
+  min-height: 100vh;
 }
 
 .app-body {
